--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -53,6 +53,8 @@
     ],
     "rules": {
         "import/prefer-default-export": "off",
+        "import/no-extraneous-dependencies": "off",
+        "react/require-default-props": "off",
         "simple-import-sort/imports": "error",
         "simple-import-sort/exports": "error",
         "react/function-component-definition": [
