--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.2",
     "redux-persist": "^6.0.0",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.0",
     "yup": "^1.0.2"
   },
@@ -34,6 +35,7 @@
     "@types/react": "^18.0.6",
     "@types/react-beautiful-dnd": "^13.1.4",
     "@types/react-dom": "^18.0.2",
+    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
