--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^14.1.1",
     "classnames": "^2.3.2",
+    "dayjs": "^1.11.7",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
